syntax = "proto3";

package model;

option go_package = "server/model";

service Db{
    rpc GetList(getListReq) returns (List) {}
    rpc CreateCube(createCubeReq) returns (Cube) {}
    rpc UploadImage(UploadImageReq) returns (ImageResp) {}
}

message ImageResp{
    string url = 1;
}

message getListReq{
    int32 first = 1;
    int32 offset = 2;
}

message List{
    repeated Cube samples = 1;
}

message Cube{
    string fid = 1;
    string uid = 2;
    string url = 3;
    string type = 4;
    string source = 5;
    string id = 6;
}

message createCubeReq{
    string fid = 1;
    string uid = 2;
    string url = 3;
    string type = 4;
    string source = 5;
}

message UploadImageReq{
    string fid = 1;
    bytes image = 2;
}